# imu_filter_cpp

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md
examples/: example.cpp
include/: filter.h  filter_base.h  filter_saito_ekf.h
src/: filter.cpp  filter_base.cpp  filter_saito_ekf.cpp  main.cpp
